wordcloud creation is done

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ toml~=0.10.2
 nltk~=3.6.2
 emoji~=1.2.0
 requests~=2.25.1
+pandas~=1.2.4
+numpy~=1.20.3
+matplotlib~=3.4.2
+wordcloud~=1.8.1
+Pillow~=8.2.0
