You can now get the definition of a word, given the word and the sentiment

--- a/Resources/definitions/slang_definitions_trust.toml
+++ b/Resources/definitions/slang_definitions_trust.toml
@@ -512,7 +512,6 @@ mejor = "[Mejor amigo] known as [Boy best friend] he's always there for you he's
 "friend's" = "someone whom is not \"[technically]\" your boyfriend/girlfriend, but whom seems to fill the traditional [roles] of such a position. Sort of a boyfriend/girlfriend who is not recieving [benefits]."
 untill = "Up to the time of or the time before something. The [abbreviation] of until is ['til] and not [till] as some incorrectly use."
 dudes = "Once your fellow people have come to know you well you automatically [inherit] the name DUDE. When more than one \"DUDE\" [come together] then it becomes \"[DUDES]\". "
-coworkers = "When you are doing something at work that is not work-related that requires your full attention, such as playing a video game, and a [co-worker] suddenly [pops] in forcing you to make it look as if you are busy and hide your game (such as with [alt-tab]).  After the co-worker leaves, you typically return to your video game to find your character dead."
 headin = "[To leave], to go, to [remove] ones self, to [take off]."
 truely = "How a [moronic] [fucktard] spells [truly]."
 buca = "[Short] form for [the italian] liqueur [Sambuca]."
@@ -551,6 +550,7 @@ mami = "an [endearing] term for a lady from a man\r\n[synonym]: [boo]"
 ucla = "University of [Caucasians] Lost [Amongst] [Asians]"
 tyga = "a rapper who is [proud] that he has [your grandmother] [on top] of his penis."
 chandler = "[a guy] that has a [giant dick] and is good at sex, normally not your first [choice] in a guy but once you have him you cannot get enough of him."
+ikaw = "[A popular] boy with alot of [fangirls],is [obsessed] with volleyballs"
 tswift = "Taylor Swift. Country's good girl sweetheart. Luscious golden locks with dreamy blue eyes. Not to mention an amazing petite body that is all around flawless. Creative artistic talent to put a happy ending to the classic \"Romeo and Juliet\" for the hit song \"Love Story.\" Hit Songs from her first album include \"Tim McGraw,\" \"Our Song,\" and \"[Teardrops On My Guitar].\" Her second album, Fearless, includes \"White Horse,\" \"You Belong With Me,\" and \"Love Story.\" She is also headlining her own tour also called Fearless. She was also numer 57 on [Maxim's] sexiest women of 2008. She has been on the cover of Rolling Stone, Allure, Glamour, Seventeen, [Cosmogirl], Blender, and other magazines."
 nikki = "She is the most amazing girl in the world. She's kind, smart, brave, and the best you'll ever meet. She's [one in a million] she will never give up on you. She is very sweet and a little scary ([RAWR]) I LOVE [NIKKI]!!!!!!!"
 cassie = "A girl with cute [halo] eyes and a [happy go lucky] [personality]!"
@@ -894,6 +894,7 @@ runnin = "[hustlin];always on [the go]; [no time] to slow down."
 estar = "to get down, or [get yourself together], although to get down for someone also means to go to the ultimate for that person or [for the gang]. To have [back-up] in a sense.\r\n\r\n"
 emas = "any email you receive on [xmas], [wishing] happy xmas, but then offering you a deal\r\nsee [xmas spam]"
 shxt = "A [censored] version of the word \"shit\", often used on sites that auto-censor profanities or where using [naughty] language is seen as distasteful or [taboo], such as Facebook."
+ugghh = "ugghh [means] that your [lazy]"
 parker = "A [mountain man]. a very good looking dude. super sweet and nice. he may stare at you and seem to be in love with you; but you may never know. awesome in every way. very athletic such as [rock climbing], skiing, [speedflying], surfing, hunting, etc. ....but he never sticks around to tell you his real feelings if they were ever there?"
 "family's" = "A group of people, usually of the same blood (but do not have to be), who genuinely love, trust, care about, and look out for each other. Not to be mistaken with relatives sharing the same household who hate eachother. [REAL family] is a [bondage] that cannot be broken [by any means]."
 caesars = "A name to yell when a really strong guy who [can control] wind [crushes] your gay italian friend with a T-Shaped [chunk] of ceiling."
@@ -1088,6 +1089,7 @@ godd = "[Todd] the Godd [Howard]"
 whatchu = "what you"
 caffeine = "The only [drug] it's [socially acceptable] to be completely [addicted] to."
 gatorade = "A superfuel sports drink. Normally consumed during [aerobic] exercise, Gatorade rehydrates and replenishes your body with carbohydrates, [salts], vitamins, and [minerals]."
+boredd = "THIS REALLY [FUNNY BITCH] ON [DISCORD] 😫😫 she is really swag and if u ever meet know that it’s [a privilege] 😤"
 omgosh = "means oh my gosh. used by [bible] bashers who dont want to use [gods] name in [vein]."
 naah = "[saying] 'no' in [lazy way]....."
 tomorow = "A name that lives in [infamy], laughs allot and is quick to anger. Most [likey] a [Gemini]"
@@ -1242,6 +1244,7 @@ cruz = "a very [epic gamer] like one of the best ones in the world, also he has 
 sayo = "A term used to describe a situation in which a person goes to another [person's] room without the authorization of a [residential] [counselor]."
 foreal = "Agreeing to [something].\r\n\r\na [shorter] [way to say] 'for real' \r\n"
 gamestop = "when a [hooker] charges $50 but you [sell] your dick for [25 cents]"
+ulit = "Cousin Ulit lives in Russia, [motherland].\r\nPlease Ulit, [come home].\r\nMama [waiting for you] wiht a nice bowl of mayonnaise."
 chem = "[short] for [chemistry]."
 2014 = "The year 2014 was possibly one of the worst years ever when it came to the vile, inhumane atrocities of the world. The year would be summed up with terrorism, disease outbreaks, accidents and weather disasters.\n\nSome notable events in 2014:\n\n*Rise of ISIS and the thousands of civilian deaths affiliated (also western reporters)\r\n*Ebola\r\n*Ukraine Crisis\r\n*Israel and Palestine intensifies\n\n*Twin [Malaysian Airlines] disasters, 700+ deaths\r\n*Sydney [Hostage Crisis]\r\n*Kidnapped Nigerian girls\r\n*South Korea ferry sinking, killing over a hundred of students\r\n*Pakistani Taliban school shooting, over 200 deaths\r\n*Floods and landslides in Asia and North America, respectively\r\n*Turkey mine accidents, hundreds dead\n\nSome rather known celebs died in this year. Robin Williams was the most memorable, respected and beloved who died in August. [Joan Rivers], a controversial comedian, with both strong fans and haters. Phillip Seymour Hoffman, an Oscar winner. And golden age actress, Shirley Temple."
 ngayon = "[dela] [cuesta] queen and kings of [rpw]"
