--- a/Resources/definitions/slang_definitions_surprise.toml
+++ b/Resources/definitions/slang_definitions_surprise.toml
@@ -1043,6 +1043,7 @@ fcking = "The [replacement] for [Fucking] to be [used] as needed."
 cuute = "-someone that resembles [a puppy] or a baby, in a good way\r\n-when you see someone and you just want to go, \"Awwwwwww\"\r\n-when someone has a really [sweet personality]\r\n-a [funny person] with great eyes."
 hadd = "A [Polish] word [meaning] \"great [sausage]\"."
 shutup = "[shut up]  is a word used  to tell another person to close [thier] mouth and stop [speaking]"
+babbyy = "no definition found."
 mais = "[Mais] is the kind of girl that will literally make you LOL. She is usually very pretty, sweet, and honest. Mais is a fighters AND a lover because if they have a strong opinion, they are known to [fight for it]. However, if they love you they are very passionate and expressive of their feelings. They like [getting close] and being held. If you currently have a [Mattie] in your life i would strongly suggest holding on to her as she will most likely complete you. [mais] is also sensitive to what you say to them.. they will only dislike you if you have ever been unecessarily mean to them. And if you are too sarcastic to them, they will get the intention that you really dont like them. Mais is a very unique and hilarious. So if you are ever having a bad day, just call one..they'll have you laughing in no time!"
 pssh = "some [odd] [way to say] \"[yeah right]\""
 gucci = "to refer to one as being ok, good, doing fine.\n\nTo also tell someone [everything is fine].\n\nTo refer to someone as dressing nice but not dressed in [the brand] [Gucci]."
@@ -1067,6 +1068,7 @@ cheerleader = "Simply a person that is either on a competitive [cheer team] or r
 toni = "He’s a kind person that I wanna talk to, but I’m really shy to do that because [I like him]. He has achievement from [level 1] and I’m in shock because I barely see a boy having an award, so it’s a point for me. I always see him in school hanging out with not-so-g***-boys, but I hope he won’t change because I love [the way he is]."
 elle = "Feminine. She.\r\nbest friend you could ever meet. Super pretty and sexy but still sweet. Everybody loves her because she is nice to everyone. Doesn’t seem to know how Gorgeous she is. Gives great advice and you can trust her with your deepest secrets. [Elle] is super loyal. [Ultra feminine] and girly, but athletic too. A very strong person still she is really gentle, kind and loving. Guys can’t stop staring. This girl has got it all, but the best thing about her is she doesn’t [act like it]. Beautiful, sexy, talented, trustworthy, caring and kind."
 bearly = "when something has the [characteristics] or [looks] similar to [a bear]."
+withh = "no definition found."
 biebs = "(noun) being a loser, noob, [dork], or annoying [little fuck].\n\nreference to: [justin bieber], an annoying little fuck."
 gwen = "a funny,always [energetic],[spunky],outgoing girl. she always knows [what to do] and what to say she isnt afraid of saying her thoughts"
 harvard = "[See] \"[Grade Inflation]\" Grade Inflation"
@@ -1117,6 +1119,7 @@ elephants = "drunk, [hammered], [slaughtered].  Used particularly in [dublin]."
 cuttin = "[Having sex] with [someone].  [Intercourse]. "
 sama = "A [suffix] to a name of a person with high values (Such as a queen, or a [priest]); A more formal name than [san] (see san)"
 audi = "A fine German automobile manufacturer.  [Audi] dates back to the very first days of cars.  The symbol of four interlocking rings is representative of the four companies, Audi, [Horch], [Wanderer], and [DKW] that came together to form first The Auto Union, and, finally, Audi.  Audis are most famous for their interiors and [quattro] all wheel drive, both of which are the best in [the buisness].  Audis are also commended for their superb handeling characteristics and fun driving experience. The Audi Ur quattro of the early 1980's was the first non-offroad car to offer all wheel drive, and it completely dominated the rally scene.  Other motorspots achievements for Audi include the [R8] and R10's victory of the famous [Le Mans] car race.  Audis are comparable in price and performance to BMW and Mercedes.  Because of quattro, many Audis are owned in northern climates where their driving joys can be enjoyed all year round.  Audi interiors are the [benchmark] that other companies attempt to match.  Audi is fully owned by the company Volkswagen and owns the exotic car manufacturer Lamborghini.  Many of Audis advancements are spread to these other companies while the most sporting of Audis can boast engines developed by Lamborghini.  Audi is based in the German city of Ingolstadt."
+333333 = "no definition found."
 kayy = "[A stupid] [trend] on facebook, in which girls that think they are hot, make their [last name] Kayy."
 suree = "A term used by someone to [sarcastically] [disagree] with another parties [claim]."
 isso = "[Brazilian] phrase meaning WTF (what the fuck)\n\nAlso, famous song by [brazilian] funk artist MC [Saed] - Que Isso [Novinha]."
@@ -1139,6 +1142,7 @@ havee = "[Start] [doing something]. [Get down] to it."
 bedd = "where [you sleep].  just like \"[bed]\" with one d, but [cooler]."
 nalang = "[Tagalog]/[Filipino] for [Instead]"
 emotionally = "[One] who manipulates other's [emotions] by [lying] about there own."
+guurl = "no definition found."
 wesley = "the coolest mother fucker around. His arch nemesis is a Dylan, cuz he's a faggot. he has the biggest cock and personality aroud. he great with the ladies and is the greatest passionate [love maker] in the universe. he spends his [time hunting] grizzly bears on top of moooses with only his [bear hands] (lol a pun)."
 mando = "Short for the word [mandatory]. Something [that goes without saying]. See also, [standard]."
 buenas = "Spanish word.When used as greeting \"¡[Buenas]!\" means \"Hello, how are you\". Used when you enter to a room for the first time during the day. Like \"Good Morning\" or \"afternoon\".\r\n\r\nAnother use is like \"[Estoy] the [buenas]\". He or She is in [good spirits] or mood."
@@ -1239,6 +1243,7 @@ bulldogs = "[Bulldogs](A player of league of legends also refers as OwenDaGamer)
 brenda = "slang for [the sexiest girl] alive, that any guy will fall in love with. often on a scale [1-10] a 1,000,000. also very nice and smart, the best of [3 worlds]"
 straws = "the act of inserting coffee straws into the [coin slot] of a 4 or 2 quarter Foosball table/[Jitz] table, to get a free game. usually can work on pool tables and [air hockey] tables =)"
 2014 = "The year 2014 was possibly one of the worst years ever when it came to the vile, inhumane atrocities of the world. The year would be summed up with terrorism, disease outbreaks, accidents and weather disasters.\n\nSome notable events in 2014:\n\n*Rise of ISIS and the thousands of civilian deaths affiliated (also western reporters)\r\n*Ebola\r\n*Ukraine Crisis\r\n*Israel and Palestine intensifies\n\n*Twin [Malaysian Airlines] disasters, 700+ deaths\r\n*Sydney [Hostage Crisis]\r\n*Kidnapped Nigerian girls\r\n*South Korea ferry sinking, killing over a hundred of students\r\n*Pakistani Taliban school shooting, over 200 deaths\r\n*Floods and landslides in Asia and North America, respectively\r\n*Turkey mine accidents, hundreds dead\n\nSome rather known celebs died in this year. Robin Williams was the most memorable, respected and beloved who died in August. [Joan Rivers], a controversial comedian, with both strong fans and haters. Phillip Seymour Hoffman, an Oscar winner. And golden age actress, Shirley Temple."
+haay = "no definition found."
 gatta = "[Gatta]:  Slang term for alcohol, can be plural as in \"gatters\". Can be a state of intoxication. Originated from gypsies now, commonly incorportaed in south east area slang, especially [Medway] Towns, Caravan sites and [Sittingbourne], Kent."
 "john's" = "[That good good]"
 mofos = "Used as [Mother Fucker]. Just a [fast] way of [typing]."
@@ -1286,6 +1291,7 @@ hermosa = "[Beautiful] in [Spanish]"
 mayer = "A very Sexy person. Often [recognized] as [the boss]. He [owns] at everything he does."
 goodnite = "a type of protective underwear (diapers) that kids and teens who [wet the bed] use to stay dry; goodnites have a cloth like layer and look and feel like real underwear; has an absorbant inner pad to [soak up] [wetness]; the only thing bad about them is that they sometimes leak, but leak gaurds on new versions do help"
 hasta = "[Bye]; [see you later]; [adios]."
+lovess = "no definition found."
 kathy = "1. (adj) referring to someone as [elegant], cute, charming, beautiful, or just [plain] sexy.\r\n\r\n2. (n) a girl with really immensely unbelievably [monumental] breasts."
 "body's" = "When someone gets utterly destroyed in something they are [competing] at. The [FGC] (Fighting Game Community) uses this [word to] describe a beating a player has taken."
 daytona = "a person with a [real big] heart. beyond the definition of kind, sweet, beautiful, [radiant], etc. someone who never ceases, even when the going gets tough. [so nice] to everyone around, and you never want them to leave."
@@ -1440,6 +1446,7 @@ candlestick = "When you put a lit blunt or joint of weed in a [bong's] [slider] 
 coliseum = "sometimes you just have one [too many friends] to visit the [effiel tower] soo you venture on over to rome and form a coliseum with just one [gladiator] (the female) in the middle with many opponents of different size and skill."
 daly = "[A guy] who always rallies [Lazer] in the [sand box]."
 poste = "Means of [electronic] message exchange not only [restricted] to though not excluding [e-mail]."
+ilovee = "no definition found."
 starte = "An [ironic] phrase used to describe one's [reaction] when events go terribly wrong. Typically used as a [roast]."
 imessaging = "A free internet messaging service intended to be competing with WhatsApp. In stark contrast to aforementioned WhatsApp, which is like a box [made of glass] where everyone can look into to see what you're talking about, iMessage is so secure that not even the FBI can sniff what you are talking about. Unfortunately, due to the fact that iMessage was made by Apple, it only runs on Apple devices. So while people with iPhones, iPods, iPads and Macs can enjoy securely talking on iMessage, WhatsApp still remains the leading application since it runs on Android and [Windows Phone] as well. Heck, it even runs on [Symbian]."
 marissa = "marissa is a very unique name, especially this spelling of it. the name marissa means 'of the sea'.. the sea is a very beautiful, mysterious place. which is the same for most girls named marissa. beautiful and very mysterious. [marissa's] usually have very low self esteem and do not see themselves as beautiful, but every single person, male or female, can see it very clearly. marissa's can be very moody and when they get the boy they want, can be very jealous too. crazy, [possessive] and kind of clingy. marissa's will do anything they can to make their boyfriend happy and are always there for absolutely anybody who needs it.\n\nmarissa's are not the thinnest things around, but this makes them even more gorgeous then all the [twigs]. they have actual bodies and even though their boobs don't grow much in their beginning teens, their bodies are still amazingly beautiful. marissa's are always cute, funny, beautiful, [amazingly gorgeous] and have the prettiest eyes and the cutest noses. their faces don't seem to have a flaw, perfect skin and some marissa's don't tan as much as other people, but their [pasty white] skin makes them glow that much more and makes them even more beautiful. most marissa's are born with brown hair and blue eyes. marissa's are not that attractive in their younger years, but when the ages 15-25 hit, that is when they start to [blossom] into the beautiful woman they were destined to be."
@@ -1461,6 +1468,7 @@ evan = "adj./adv.\r\n1. to be awesome beyond [contemplation] 2. to be so good lo
 ingat = "ingat is a [filipino] [word]. for [take care]"
 ridin = "tippin in a candy car pickin up some bitches [gettin some head] and yo balls lick at the same time while smoking a blunt of da best [herbigramical] you ever seen in a whip on 22-28 or higher inch rims just [swervin]."
 cirque = "to cirque; to get ones cirque on\r\n\r\nTo try to [incorporate] [acrobatic] [moves] in everyday life, especially during sexual intercourse."
+yeess = "no definition found."
 lucas = "Super-Badass [kid]. Usually does incredibly stupid things. All around [leader]. Extremely  attractive and cool.\r\n\r\n[Fly] as a motha-fucka.\r\n"
 diane = "someone that is [the most beautiful girl in the world] and [really] [awesome]\r\n"
 bitchass = "Popular name for the University of Maryland mascot [Testudo].  Originated from a [rumor] that rubbing a stature of the mascot would bring good luck.  After this ritual brought many students misfortune, the name [Bitchass] was chosen in reference."
@@ -1489,6 +1497,7 @@ kissin = "A term used when describing the act of a kiss. Usually used in [the pr
 ronald = "[slang] for [poop], shit or to [take a dump]"
 downhill = "A sport. [Raced] on [moutain] bikes down a steep hill filled with obsicals such as roots, jumps, [stumps] , drops and so on. Best sport in the world get out and do it. Commonly [raced] on full suspension bikes but some hartails are equaly as suited to racing downhill."
 11am = "no definition found."
+evaa = "no definition found."
 lovve = "More than just [love]. [Love] [so Very] much it needed a [new word]."
 reagan = "reagan is a really [sweet boy] who is always [interested] in what you are doing. He is [mysterious] and is someone you have yet to find more about !"
 hyde = "Hideto Takarai. The vocalist of [L'Arc~en~Ciel] and/or guitarist of P'unk~en~Ciel who is married to (and has a child with) model [Megumi] [Oishi]."
@@ -1516,6 +1525,7 @@ xtra = "A [ISP] from New Zealand Probably the worst in the devloped world holds 
 yeww = "A [super excited] person who is underlyingly saying yes, however is so [excited] he/she wants to show their excitment in a more, well exciting way. such a [Fantabulous] word"
 cuzzo = "A term of endearment for one who is a cousin.  Does not need to be of blood relation, but some one who has a cousin like relationship with another person. It is generally used for a [first cousin] situation.  Not necessarily used in context for \"[gang banger]\" [terminology] but can be.\r\n\r\nB34"
 bestiee = "It's a cool word for \"[Best Friend]\" I [consider it] [SlAng]"
+worldd = "no definition found."
 stayin = "Being able to [move] from one [sexual position] to another without penis [withdrawal]."
 petsmart = "PetSmart:\r\n\r\nA place where people let their dogs piss and shit on the floor, don't clean it up themselves in spite of the \"clean up stations\" located conveniently around the store or don't even bother to mention it to an employee. \r\n\r\nWhere old [smelly cat] ladies who take in dozens of [strays] come in and drop 200 dollars that they don't have on 250 cans of [cat food] that they want taken out of the cardboard [trays], double bagged and tied. \r\n\r\nWhere the dress code is so strict that [khaki] pants alone aren't acceptable. They can't have rivets and must be single seamed - NOT double. And technically [white socks] aren't allowed either, for they must match either your shoes or pants. \r\n\r\nWhere white trash comes in to buy live animals for their kids but refuse to spend enough to get all the things the animal needs to be properly taken care of and you have to spend an hour convincing them and explaining everything. \r\n\r\nNote: In spite of all the latter, I LOVE my job."
 wishh = "no definition found."
@@ -1535,7 +1545,9 @@ iloveyou = "It is [a one] word [way to say] a great [three] word phrase."
 siento = "[the spanish way] of saying \"[sorry not sorry].\" great if you're trying to expand your [linguistic] boundaries"
 gameday = "Something we [never] [get in] [Computer] Applications."
 understan = "no definition found."
+boyss = "no definition found."
 yoouu = "An [elite] word for \"[rape]\"\n\nAlso know as \"[drew]\""
+loovvee = "no definition found."
 baee = "[soud] used to [scare] or annoy a [small dog] "
 truely = "How a [moronic] [fucktard] spells [truly]."
 lenox = "The [personification] of [elemental] [chaos]."
@@ -1591,6 +1603,7 @@ roun = "A [New Orleans] expression meaning good friend. Someone who you have gon
 tomar = "slang or a [shortcut] for the word \"tomorrow\".Used by [Akon] on the song \"Bartender\" with [T-Pain]."
 celeb = "Someone [who you] [never heard] of 5 years ago and who nobody [younger] will have heard of 5 years from now."
 comforter = "[Bedding]/blanket comprised of two layers of cloth, filled with stuffing of some kind, and [sewn] together. Filling can be down, which is warm, [luxurious], lightweight, and warm."
+"você" = "no definition found."
 garfield = "The coolest [cartoon cat] to date. Garfield was created by [Jim Davis] and highly succesful. \r\n\r\nGarfield is well known for eating entirely too much, sleeping his little life away, and kicking his [dog friend] Odie off the table.\r\n\r\nExtremely amusing for all generations."
 stevens = "The last name of badass people. you probably shouldn't mess with these people because they will [slaughter] your family and leave them [on meat] [hooks] for the police to find. most of them tend to have a darker skin complexion"
 bourne = "A [killing machine] who leads a double life as a [spy] and [family man]."
