new slang algorithm

--- a/Resources/definitions/standard_definitions_anger.toml
+++ b/Resources/definitions/standard_definitions_anger.toml
@@ -2103,6 +2103,7 @@ pitch = "Throw (the ball) for the batter to try to hit."
 homeless = "(of a person) without a home, and therefore typically living on the streets."
 chilling = "Horrifying or frightening."
 distance = "Make (someone or something) far off or remote in position or nature."
+roommates = "A person occupying the same room as another."
 achievement = "A thing done successfully, typically by effort, courage, or skill."
 swollen = "(especially of a part of the body) become larger or rounder in size, typically as a result of an accumulation of fluid."
 typing = "The action or skill of writing something by means of a typewriter or computer."
@@ -4309,6 +4310,7 @@ organize = "Arrange into a structured whole; order."
 humor = "Comply with the wishes of (someone) in order to keep them content, however unreasonable such wishes might be."
 edit = "Prepare (written material) for publication by correcting, condensing, or otherwise modifying it."
 swell = "A full or gently rounded shape or form."
+backseat = "A seat at the back of a vehicle."
 dreads = "Anticipate with great apprehension or fear."
 stepdad = "stepdad"
 brittany = "A region and former duchy of northwestern France, forming a peninsula between the Bay of Biscay and the English Channel. It was occupied in the 5th and 6th centuries by Britons fleeing the Saxons, and was incorporated into France in 1532."
