--- a/Resources/definitions/standard_definitions_anticipation.toml
+++ b/Resources/definitions/standard_definitions_anticipation.toml
@@ -2526,6 +2526,7 @@ worn = "past participle of wear"
 cries = "Shed tears, typically as an expression of distress, pain, or sorrow."
 marks = "Make a visible impression or stain on."
 rolling = "Moving by turning over and over on an axis."
+roommates = "A person occupying the same room as another."
 strep = "strep"
 aunts = "The sister of one's father or mother or the wife of one's uncle."
 hiring = "Obtain the temporary use of (something) for an agreed payment."
@@ -5925,6 +5926,7 @@ flashing = "Brief, sudden, and intermittent bursts of bright light."
 marshmallows = "A soft, chewy item of confectionery made with sugar and gelatin."
 drawer = "A box-shaped storage compartment without a lid, made to slide horizontally in and out of a desk, chest, or other piece of furniture."
 salted = "Having salt as an ingredient; containing or seasoned with salt."
+backseat = "A seat at the back of a vehicle."
 trends = "Change or develop in a general direction."
 realm = "A kingdom."
 dawgs = "dawgs"
