--- a/Resources/definitions/standard_definitions_disgust.toml
+++ b/Resources/definitions/standard_definitions_disgust.toml
@@ -2330,6 +2330,7 @@ announce = "Make a public and typically formal declaration about a fact, occurre
 meany = "A mean or small-minded person."
 entertain = "Provide (someone) with amusement or enjoyment."
 bass = "The lowest adult male singing voice."
+roommates = "A person occupying the same room as another."
 fucker = "A contemptible or stupid person (often used as a general term of abuse)."
 nipple = "Provide (something) with a projection like a nipple."
 hollywood = "A district in Los Angeles, the principal center of the US movie industry."
@@ -5457,6 +5458,7 @@ snowy = "Covered with snow."
 marrying = "Join in marriage."
 albany = "A city in southwestern Georgia; population 75,831 (est. 2008)."
 breeze = "Come or go in a casual or lighthearted manner."
+backseat = "A seat at the back of a vehicle."
 hamster = "A solitary burrowing rodent with a short tail and large cheek pouches for carrying food, native to Europe and northern Asia."
 aching = "Sore; throbbing with pain."
 slamming = "An insulting and critical attack."
