--- a/Resources/definitions/standard_definitions_fear.toml
+++ b/Resources/definitions/standard_definitions_fear.toml
@@ -2059,6 +2059,7 @@ someday = "At some time in the future."
 sandy = "A light, crumbly cookie, typically made with chopped pecans."
 cody = "A city in northwestern Wyoming, associated with Buffalo Bill Cody, who lived here; population 9,309 (est. 2008)."
 cuddled = "Hold close in one's arms as a way of showing love or affection."
+roommates = "A person occupying the same room as another."
 favor = "Feel or show approval or preference for."
 meds = "Medical."
 retweets = "(on the social media application Twitter) repost or forward (a message posted by another user)"
