--- a/Resources/definitions/standard_definitions_joy.toml
+++ b/Resources/definitions/standard_definitions_joy.toml
@@ -2327,6 +2327,7 @@ hoop = "Bind or encircle with or as with hoops."
 changes = "Make (someone or something) different; alter or modify."
 chevy = "A Chevrolet car."
 tech = "Technology."
+roommates = "A person occupying the same room as another."
 grocery = "A grocer's store or business."
 ankle = "Leave."
 cherry = "A small, round stone fruit that is typically bright or dark red."
@@ -5913,6 +5914,7 @@ evidence = "Be or show evidence of."
 payment = "The action or process of paying someone or something or of being paid."
 diploma = "A certificate awarded by an educational establishment to show that someone has successfully completed a course of study."
 prior = "A previous criminal conviction."
+backseat = "A seat at the back of a vehicle."
 developed = "Advanced or elaborated to a specified degree."
 gene = "(in informal use) a unit of heredity which is transferred from a parent to offspring and is held to determine some characteristic of the offspring."
 complaints = "A statement that something is unsatisfactory or unacceptable."
