--- a/Resources/definitions/standard_definitions_sadness.toml
+++ b/Resources/definitions/standard_definitions_sadness.toml
@@ -1775,6 +1775,7 @@ style = "Design or make in a particular form."
 tease = "Make fun of or attempt to provoke (a person or animal) in a playful way."
 windy = "(of weather, a period of time, or a place) marked by or exposed to strong winds."
 tons = "Imperial or metric ton(s)"
+roommates = "A person occupying the same room as another."
 naked = "(of a person or part of the body) without clothes."
 teachers = "A person who teaches, especially in a school."
 homecoming = "An instance of returning home."
