--- a/Resources/definitions/standard_definitions_surprise.toml
+++ b/Resources/definitions/standard_definitions_surprise.toml
@@ -2313,6 +2313,7 @@ anytime = "At whatever time."
 mary = "Mother of Jesus; known as the (Blessed) Virgin Mary, or St. Mary, or Our Lady. According to the Gospels, she was a virgin betrothed to Joseph and conceived Jesus by the power of the Holy Spirit. She has been venerated by Catholic and Orthodox Churches from earliest Christian times. Feast days, January 1 (Roman Catholic Church), March 25 (Annunciation), August 15 (Assumption), September 8 (Nativity), December 8 (Immaculate Conception)."
 attracted = "Cause to come to a place or participate in a venture by offering something of interest or advantage."
 atlanta = "The capital of the state of Georgia in the US, in northwest central Georgia; population 537,958 (est. 2008). It was burned by Union forces under Gen. William T. Sherman in 1864 during the Civil War."
+roommates = "A person occupying the same room as another."
 release = "Allow or enable to escape from confinement; set free."
 cable = "Contact or send a message to (someone) by cablegram."
 mouse = "A small rodent that typically has a pointed snout, relatively large ears and eyes, and a long tail."
@@ -6142,6 +6143,7 @@ digital = "(of signals or data) expressed as series of the digits 0 and 1, typic
 owners = "A person who owns something."
 forty = "The number equivalent to the product of four and ten; ten less than fifty; 40.The numbers from forty to forty-nine, especially the years of a century or of a person's life.Forty years old.Forty miles an hour.The third point won by a player in a game."
 winery = "An establishment where wine is made."
+backseat = "A seat at the back of a vehicle."
 babby = "babby"
 sinus = "A cavity within a bone or other tissue, especially one in the bones of the face or skull connecting with the nasal cavities."
 realm = "A kingdom."
