--- a/Resources/definitions/standard_definitions_trust.toml
+++ b/Resources/definitions/standard_definitions_trust.toml
@@ -2842,6 +2842,7 @@ charge = "Demand (an amount) as a price from someone for a service rendered or g
 spoils = "Diminish or destroy the value or quality of."
 dresses = "Put on one's clothes."
 tease = "Make fun of or attempt to provoke (a person or animal) in a playful way."
+roommates = "A person occupying the same room as another."
 boba = "another term for bubble tea"
 springs = "Move or jump suddenly or rapidly upwards or forwards."
 melting = "The action or process of liquefying due to heat."
@@ -5909,6 +5910,7 @@ thumb = "Press, move, or touch (something) with one's thumb."
 antisocial = "Contrary to the laws and customs of society; devoid of or antagonistic to sociable instincts or practices."
 arrives = "Reach a place at the end of a journey or a stage in a journey."
 scheduled = "Included in or planned according to a schedule."
+backseat = "A seat at the back of a vehicle."
 unacceptable = "Not satisfactory or allowable."
 vancouver = "A city and port in British Columbia, in southwestern Canada, on the mainland opposite Vancouver Island; population 578,041 (2006). It is the largest city and chief port in western Canada."
 monitor = "Observe and check the progress or quality of (something) over a period of time; keep under systematic review."
