Beautification of the output (progress-bars and such), updated some requirements!

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ toml~=0.10.2
 nltk~=3.6.2
 emoji~=1.2.0
 requests~=2.25.1
-pandas~=1.2.4
-numpy~=1.20.3
+pandas~=1.2.5
+numpy~=1.21.0
 matplotlib~=3.4.2
 wordcloud~=1.8.1
 Pillow~=8.2.0
 pymongo~=3.11.4
 dnspython>=2.1.0
+tqdm~=4.61.1
